# model

./: CMakeLists.txt  Cmakelists.txt  Game.py  example.wolf  output.py  spy.game  spy.py  test_action.wolf  wolf.game  wolf.py  wolf_example.game  wolf_example.py  wolf_out.py  wolf_simple.game  wolf_simple.py  wolf_simple_out3.py
LuduScript/LuduScript-head/: .gitignore  CMakeLists.txt  LICENSE  README.md
LuduScript/LuduScript-head/docs/: syntax.md
LuduScript/LuduScript-head/examples/in/: e1.gen  e10.gen  e2.gen  e3.gen  e4.gen  e5.gen  e6.gen  e7.gen  e8.gen  e9.gen  poker.gen  werewolf.gen
LuduScript/LuduScript-head/include/: ast.h  interpreter.h  lexer.h  parser.h
LuduScript/LuduScript-head/src/: ast.cpp  interpreter.cpp  interpreter_stmt.cpp  lexer.cpp  main.cpp  parser.cpp  parser_expr.cpp
LuduScript/LuduScript-main/: .gitignore  wolf.py
LuduScript/LuduScript-main/docs/: syntax.md
LuduScript/LuduScript-main/include/: generator.h  lexer.h  parser.h  werewolf_generator.h
LuduScript/LuduScript-main/src/: generator.cpp  lexer.cpp  main.cpp  parser.cpp  werewolf_generator.cpp
LuduScript/LuduScript-refactor/: CMakeLists.txt  LuduScript_Reference.md  README.md
LuduScript/LuduScript-refactor/docs/: Template.md
LuduScript/LuduScript-refactor/examples/: simple_werewolf.ludu  simple_werewolf.py  spy.ludu  spy.py  werewolf.ludu  werewolf.py
LuduScript/LuduScript-refactor/src/: ast.h  codegen.cpp  codegen.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
docs/: syntax.md
include/: ast.h  generator.h  interpreter.h  lexer.h  parser.h  py_binding.h
src/: ast.cpp  generator.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  py_binding.cpp
